--- a/css/style.css
+++ b/css/style.css
@@ -7,16 +7,16 @@ article,aside,details,figcaption,figure,footer,header,hgroup,menu,nav,section {d
 html{font-size: 62.5%;}
 html[lang="en"]{opacity:0;}
 html.wf-active,html.wf-inactive{opacity: 1; transition: opacity .4s ease-out; }
-body{color: rgba(0,0,0,.8); background: rgb(248, 248, 248); font-family: 'Montserrat', sans-serif; font-size: 1.6rem;}
-p{font-size: 1.4rem; margin: 0 0 16px 0; font-weight: 400; line-height: 1.6;}
+body{color: rgba(0,0,0,.8); background: #fff; font-family: 'Roboto', sans-serif; font-size: 1.6rem;}
+p{font-size: 1.6rem; margin: 0 0 16px 0; font-weight: 400; line-height: 1.6;}
 p:last-of-type{margin: 0;}
-a{color: #ef4538;}
-ul{font-size: 1.4rem; padding: 0 0 22px 30px; font-weight: 400; line-height: 1.6; list-style: outside disc; overflow: hidden;}
-ol{font-size: 1.4rem; padding: 0 0 22px 30px; font-weight:  400; line-height: 1.6; overflow: hidden;}
+a{color: #262760;}
+ul{font-size: 1.6rem; padding: 0 0 22px 30px; font-weight: 400; line-height: 1.6; list-style: outside disc; overflow: hidden;}
+ol{font-size: 1.6rem; padding: 0 0 22px 30px; font-weight:  400; line-height: 1.6; overflow: hidden;}
 li{position: relative;}
-h1{font-size: calc(2.5rem + 1.5vw); margin: 0 0 10px; line-height: 140%; font-weight: 400; display: block; width: 100%;}
-h2{font-size: calc(2.0rem + 1vw); margin: 0 0 10px; line-height: 140%; font-weight: 300; display: block;  width: 100%;}
-h3{font-size: calc(1.8rem + .8vw); margin: 0 0 10px; font-weight: 300; width: 100%;}
+h1{font-size: calc(2.5rem + 1.5vw); margin: 0 0 10px; line-height: 140%; font-weight: 400; display: block; width: 100%; font-family: 'Crimson Text', serif; color: #be1f3b;}
+h2{font-size: calc(2.0rem + 1vw); margin: 0 0 10px; line-height: 140%; font-weight: 300; display: block;  width: 100%; font-family: 'Crimson Text', serif; color: #262760;}
+h3{font-size: calc(1.8rem + .8vw); margin: 0 0 10px; font-weight: 300; width: 100%; font-family: 'Crimson Text', serif; color: #262760;}
 blockquote{width: 80%; max-width:700px; margin: 50px auto; font-style: italic; color: #555; padding: 1.2em 1.2em 1.2em 75px; border-left: 8px solid #ef4538; line-height: 1.6; position: relative; background: #eeeeee;}
 blockquote::before{font-family:Arial; content:"\201C"; color:#ef4538; font-size:4em; position: absolute; left: 10px; top:-10px;}
 img{max-width: 100%; height: auto; vertical-align: bottom; border: none;}
@@ -57,10 +57,11 @@ a.button{background: #ef4538 !important; color: #fff; padding: 4px 8px; display:
 .modal .modal_close{color: rgba(0,0,0,.84); position: absolute; top: 0; right: 0; padding: 5px; cursor: pointer; line-height: 100%; z-index: 100;}
 
 /*Header*/
-.headerWrap{width: 100%;}
-.header{width: 100%; max-width: 1200px; margin: 0 auto; padding: 20px 10px; position: relative; display: flex; flex-flow: row wrap; justify-content: space-between; align-items: flex-end;}
-.header .logo{width: 50%; max-width: 240px;}
-.header .logo a{display: block;}
+.headerWrap{position: relative; width: 100%; position: absolute; top: 0; left: 0; right: 0; z-index: 10;}
+.headerWrap::before {content:''; position: absolute; top: 0; left: 0; right: 0; height: 180px; background: rgba(0,0,0,0.5); background: linear-gradient(rgba(0,0,0,0.5) 0%, rgba(0,0,0,0) 100%);}
+.header{width: 100%; max-width: 1400px; margin: 0 auto; padding: 0 20px; position: relative; display: flex; flex-flow: row wrap; justify-content: space-between;}
+.header .logo{width: 50%; max-width: 180px; background: #fff; height: 180px; display: flex; align-items: center; justify-content: center; box-shadow: 0 4px 6px rgba(50,50,93,.11), 0 1px 3px rgba(0,0,0,.08);}
+.header .logo a{display: block; width: 100%;}
 .header .logo img{width: 100%;}
 .header .mobile_icons{display: none;}
 .header .mobile_icons a{color: #4e4e4e; display: flex; width: 100%; height: 100%; justify-content: center; align-items: center;}
@@ -77,10 +78,15 @@ a.button{background: #ef4538 !important; color: #fff; padding: 4px 8px; display:
     }
 
 /*Nav*/
-.nav{user-select: none; text-align: center; z-index: 10; height: 30px; display: flex; flex-flow: row wrap; align-items: center;}
+.nav{user-select: none; text-align: center; z-index: 10; height: 30px; margin: 15px 0; display: flex; flex-flow: row wrap; align-items: center;}
 .nav .item{position: relative;}
-.nav .item a{margin:0 32px 0 0; display: block; color: #4e4e4e; text-decoration: none; font-weight: 400; font-size: 1.4rem; transition: color 0.3s cubic-bezier(.25,.8,.25,1);}
-.nav .item a:hover, .nav .item a:focus{color: #ef4438;}
+.nav .item a{position: relative; margin: 0 32px 0 0; display: block; color: #fff; text-decoration: none; text-transform: uppercase; font-weight: 300; font-size: 1.8rem; transition: color 0.3s cubic-bezier(.25,.8,.25,1);}
+.nav > .item a:before {content: ''; position: absolute; top: calc(100% + 5px); left: 0; right: 0; width: 6px; height: 6px; border-radius: 50%; margin: 0 auto; background: #fff; transform: translateY(-10px); opacity: 0; transition: 250ms ease;}
+.nav .item.unique a {border: 1px solid #fff; padding: 6px 12px; border-radius: 0.25em; transition: 250ms ease;}
+.nav .item.unique a:hover, .nav .item.unique a:focus {color: #fff; background: #be1f3b; border-color: #be1f3b;}
+.nav .item.unique a::before {display: none;}
+.nav .item a:hover, .nav .item a:focus{color: rgba(255,255,255,0.65);}
+.nav > .item a:hover::before, .nav > .item a:focus::before {transform: translateY(0); opacity: 1;}
 .nav .item:last-child a{margin:0}
 .nav .item i{font-size: 1.2rem; cursor: pointer; margin: 0 0 0 6px;}
 .nav .item.open{background: rgba(255,255,255,.2);color: #ef4438;}
@@ -134,7 +140,7 @@ a.button{background: #ef4538 !important; color: #fff; padding: 4px 8px; display:
 .search .autocomplete-items a.autocomplete-active{background: #ef4438; color: #ffffff;}
 
 /* Slideshow */
-.slideshow{user-select: none; display: none; width: 100%; max-width: 1180px; overflow: hidden; height: auto; margin: 0 auto;}
+.slideshow{user-select: none; display: none; width: 100%; max-width: 1920px; overflow: hidden; height: auto; margin: 0 auto;}
 .slideshow.slick-initialized{display: block;}
 .slideshow .slide{user-select: none;width: 100%; position: relative; outline: none;}
 .slideshow .slide.slick-current{z-index: 100;}
@@ -179,6 +185,7 @@ a.button{background: #ef4538 !important; color: #fff; padding: 4px 8px; display:
 .mobile_slider .prev:focus,.mobile_slider .next:focus{opacity: 1; outline: none;}
 
 /*Main Content*/
+#home .content {max-width: 1400px;}
 .content{width: 100%; max-width: 1200px; min-height: 80vh; margin: 0 auto; padding:0 10px; position: relative; overflow: hidden;}
 
     @media (max-width: 640px) {
@@ -199,20 +206,26 @@ a.button{background: #ef4538 !important; color: #fff; padding: 4px 8px; display:
     }
 
 /*Intro Text*/
-.intro_text{text-align: center; width:100%; max-width:960px; padding:10px; margin:120px auto 0;}
+.intro_text{text-align: center; width:100%; max-width:960px; padding:10px; margin:60px auto;}
+.intro_text > p {font-size: 2rem;}
     @media (max-width: 768px) {
     .intro_text{margin: 80px auto 0;}
     }
 
 /*Features*/
-.features {overflow: hidden; margin: 30px -10px; display: flex; flex-flow: row wrap;}
+.features {overflow: hidden; margin: 30px -10px 10px; display: flex; flex-flow: row wrap;}
 .features .item {position: relative; overflow: hidden; margin: 10px; width: calc(33.333% - 20px);}
 .features .item a{text-decoration: none; display: block; color: inherit;}
-.features .item .image img{width: 100%; height: auto;}
-.features .item .bar{width: 100%; padding: 10px 0; text-align: center;}
-.features .item .title {font-size: 2rem; margin: 0; text-transform: uppercase; font-weight: 400;}
-.features .item .description {font-size: 1.3rem; text-transform: uppercase; font-weight: 400;}
-.features .item:hover .image{opacity: .9;}
+.features .item .image {overflow: hidden; filter: grayscale(100%);}
+.features .item .image img{width: 100%; height: auto; transition: 500ms ease;}
+.features .item .bar{position: absolute; top: 0; left: 0; width: 100%; height: 100%; display: flex; align-items: center; justify-content: center; flex-direction: column; padding: 10px 0; text-align: center; background: rgba(0,0,0,0.5);}
+.features .item .title {font-size: 5rem; margin: 0; text-transform: uppercase; font-weight: 300; color: #fff; letter-spacing: 4px;}
+.features .item .description {font-size: 1.8rem; font-weight: 300; color: #fff; padding: 15px; opacity: 0; max-height: 0; transition: 500ms ease;}
+.features .item:hover .description {max-height: 100%; opacity: 0.85;}
+.features .item:hover img {transform: scale(1.15);}
+
+.features .item:nth-of-type(1) .bar {background: rgba(190, 31, 59, 0.75);}
+.features .item:nth-of-type(3) .bar {background: rgba(38, 39, 96, 0.75);}
 
     @media (max-width: 768px) {
     .features{margin: 20px -10px;}
@@ -227,6 +240,45 @@ a.button{background: #ef4538 !important; color: #fff; padding: 4px 8px; display:
     .features .item .image{width: 25%;}
     .features .item .bar{width: 75%;}
     }
+
+/* Banner */
+.banner {position: relative;}
+.banner a{text-decoration: none; display: block; color: inherit;}
+.banner .image {overflow: hidden;}
+.banner .image img{width: 100%; height: auto; transition: 500ms ease;}
+.banner .bar {position: absolute; top: 0; left: 0; width: 100%; height: 100%; display: flex; align-items: center; justify-content: center; flex-direction: column; padding: 10px 0; text-align: center; background: rgba(0,0,0,0.5);}
+.banner .title {font-size: 5rem; margin: 0; text-transform: uppercase; font-weight: 300; color: #fff; letter-spacing: 4px;}
+.banner .description {font-size: 1.8rem; font-weight: 300; color: #fff; padding: 15px; opacity: 0; max-height: 0; transition: 500ms ease;}
+.banner:hover .description {max-height: 100%; opacity: 1;}
+.banner:hover img {transform: scale(1.15);}
+
+/* Updates */
+.updates {margin: 60px 0;}
+.updates h2 {text-align: center; margin: 0 0 20px;}
+.updates a {text-decoration: none; color: inherit;}
+.updates .group {display: flex; justify-content: center; margin: 10px -10px;}
+.updates .group > div {margin: 10px; width: calc(33.333% - 20px);}
+.updates .group .image {overflow: hidden;}
+.updates .group img {transition: 500ms ease;}
+.updates .group h3 {font-size: 2.8rem;}
+.updates .group p {opacity: 0.75;}
+.updates .group .dates {margin: 15px 0;}
+.updates .group .dates i {color: #be1f3b;}
+.updates .group .item:hover img {transform: scale(1.15);}
+
+/* Events */
+.events {margin: 60px 0;}
+.events h2 {text-align: center;}
+.events a {text-decoration: none; color: inherit;}
+.events .group {display: flex; justify-content: center; margin: 10px -10px;}
+.events .group > div {margin: 10px; width: calc(33.333% - 20px);}
+.events .group .image {overflow: hidden;}
+.events .group img {transition: 500ms ease;}
+.events .group h3 {font-size: 2.8rem;}
+.events .group p {opacity: 0.75;}
+.events .group .dates {margin: 15px 0;}
+.events .group .dates i {color: #be1f3b;}
+.events .group .item:hover img {transform: scale(1.15);}
 
 /* Large Gallery */
 .large_gallery .group {display: flex; align-items: center; flex-flow: row wrap;}
@@ -272,8 +324,11 @@ a.button{background: #ef4538 !important; color: #fff; padding: 4px 8px; display:
     }
 
 /*Instafeed*/
-.instagram_widget{margin: 120px auto 0; width: 100%; max-width: 1200px;}
+.instagram_widget{margin: 60px auto 0; width: 100%; max-width: 1400px;}
+.instagram_widget h2 {text-align: center;}
 .instagram_widget .heading{width: 100%; margin:0 0 10px 0;}
+#eapps-instagram-feed-1 {margin: 0 -10px}
+
     @media (max-width: 768px) {
     .instagram_widget{margin: 80px auto 0;}
     }
@@ -504,11 +559,11 @@ a.button{background: #ef4538 !important; color: #fff; padding: 4px 8px; display:
     }
 
 /*Footer*/
-.footer_wrap{width: 100%; background: #f8f8f8; padding: 10px; margin: 20px 0 0 0;}
-.footer{width: 100%; max-width: 1200px; margin: 0 auto; overflow: hidden; font-size: 1.2rem; text-align: center; color: rgba(0,0,0,.84);}
+.footer_wrap{width: 100%; background: #f6f9fc; padding: 30px; margin: 20px 0 0 0;}
+.footer{width: 100%; max-width: 1200px; margin: 0 auto; overflow: hidden; font-size: 1.6rem; text-align: center; color: rgba(0,0,0,.84);}
 .footer a{color: rgba(0,0,0,.84);}
 .footer .social{margin: 20px auto; font-size: 2rem; display: flex; justify-content: center;}
-.footer .social a{margin: 0 5px; position: relative; background: rgba(0,0,0,1); display: flex; align-items: center; justify-content: center; padding: 5px; color: #fff; text-decoration: none; width: 2em;}
+.footer .social a{margin: 0 5px; position: relative; background: #262760; border-radius: 50%; display: flex; align-items: center; justify-content: center; padding: 5px; color: #fff; text-decoration: none; width: 2em;}
 .footer .social a:after {content: ""; display: block; padding-bottom: 100%;}
 .footer .social a:hover{background: rgba(0,0,0,.6);}
 .footer .address{margin: 0 auto 5px;}
